--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,7 @@
-GOOGLE_CLIENT_ID=''
-GOOGLE_CLIENT_SECRET=''
-GITHUB_CLIENT_ID=''
-GITHUB_CLIENT_SECRET=''
-RESEND_API_KEY=''
-NEXT_PUBLIC_API_URL=''
+GOOGLE_CLIENT_ID=""
+GOOGLE_CLIENT_SECRET=""
+GITHUB_CLIENT_ID=""
+GITHUB_CLIENT_SECRET=""
+RESEND_API_KEY=""
+NEXT_PUBLIC_API_URL=""
+AUTH_SECRET=""
